# crabgraph

./: Cargo.toml  README.MD
examples/web_search/: graph.rs  main.rs  model.rs  prompts.rs  py_genai_client.rs  state.rs  utils.rs
src/: edge.rs  lib.rs  node.rs  request.rs  state.rs  utils.rs
src/edge/: function.rs
src/ext/: axum.rs
src/node/: function.rs  sequence.rs
src/typed/: json.rs
templates/: query_writer.jinja2.md
tests/: test_graph_run.rs
