[package]
name = "crabgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
schemars = "1.0.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-service = "0.3.3"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.98"
