[package]
name = "crabgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
schemars = "1.0.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-service = "0.3.3"
tracing = "0.1.41"
rmcp = { version = "0.2.1", features = ["macros", "server"]}
axum = { version = "0.8" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rig-core = "0.13"
# modify-core = { git = "https://github.com/4t145/modify.git" }
modify-core = { path = "../modify/crates/modify" }


[dev-dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
chrono = "0.4.41"
# genai = { git = "https://github.com/jeremychone/rust-genai" }
genai = { path = "../rust-genai" }
schemars = "1.0.1"
# rs-gemini-genai = { git = "https://github.com/myanvoos/rs-gemini-genai.git" }
# pyo3 = { version = "0.25", features = ["auto-initialize", "abi3"] }
# pyo3-async-runtimes = { version = "0.25", features = ["tokio"] }
